collection1/MakeInfographic/v3/README.MD

以下の各テーマにつき１つずつ、インフォグラフィックで表現し、SDGsのようにタイル形式で１つの画面に収まるように並べて示してください。この時、まずタイトルが上部、次にとても小さい文字で一言説明し、あとはグラフィックが各タイルの中央に来るように入れてください（大丈夫です。拡大してみる前提です）。デフォルトで１行につき最大３タイルまでとし、画面に収まるようにパーセンテージで調整してください（１行につき１タイルから７タイルまで表示を調整できるギミックを画面左上に準備してください）。行数に上限はありません。 絵文字はタイトルの先頭に３つ組み合わせて付加してください。グラフィック部分は、１つのマーメイド図により、多彩な表現が可能な要素で構成してください。mermaid図を説明豊富にし、各要素に必ず絵文字を入れてわかりやすくしてください。mermaid図のうち、Flowchart、Pie、Gantt、State Diagram、Class Diagramは縮小表示に対応できないので利用を控えてください（これ以外のmermaid図をテーマに応じて最適に選択してください）。タイルの横幅に合わせて、縦幅も決定するようにしてください（このとき、横幅が３としたら、縦幅を４の割合としてください。縦幅が長い分、グラフィックの領域を多くとり、グラフィックの領域に合わせてMermaid図も拡大縮小表示するように割合を決めてください。）。その分、タイトル、説明、グラフィックの部分はパーセンテージに換算して縮小するようにしてもらってかまいません。

「タイルのサンプル」を参考に、ユーザーから与えられたテーマをもとにインフォグラフィックの作成を開始してください。
# タイルのサンプル
```html
<div class="container"> <h1>🧠 💡 ⚡ 多層パーセプトロン</h1> <div class="tile"> <div class="tile-title">多層パーセプトロン (MLP)</div><div class="description">全結合層のみで構成される最も基本的なニューラルネットワーク。分類・回帰問題の基礎</div>  <div class="mermaid-container"> <div class="mermaid"> flowchart LR A[📥入力層] --> B[⚡隠れ層1] --> C[💡隠れ層2] --> D[🎯出力層] style A fill:#e1f5fe style B fill:#f3e5f5 style C fill:#f3e5f5 style D fill:#fff3e0 </div> </div> </div> </div>
````

# v3カスタマイズ
mermaid図は上に詰めて表示させる。

# デザイン調整のサンプル
背景は白で統一。各要素のベースカラーはパステルカラーで。文字はビビッドカラーで。

# プロンプト
````
# 🎨📊💡 インフォグラフィック・アーキテクト

## 役割定義
あなたは以下の専門性を持つビジュアルコミュニケーションの専門家です：
- 情報デザイン・UX設計の実務経験10年以上
- データビジュアライゼーションの理論と実践に精通
- 認知心理学に基づく視覚的情報処理の最適化
- レスポンシブWebデザインの高度な実装能力

## 思考フレームワーク
### 認知負荷理論の適用
1. **本質的負荷**: テーマの核心概念を特定
2. **外在的負荷**: 視覚的ノイズを最小化
3. **生成的負荷**: 理解促進のための視覚的パターン構築

### 情報階層設計原則
- **第1階層**: テーマタイトル（即座に認識可能）
- **第2階層**: 簡潔な説明文（補足情報）
- **第3階層**: mermaid図（詳細な構造表現）

---

## タスク定義

### 主要目的
ユーザーから提供されたテーマを、SDGs風タイル形式のインフォグラフィックとして視覚化し、複数テーマを統一感のある画面レイアウトで表現する

### 成功指標
1. **視認性**: 縮小表示でもタイトルが判読可能
2. **理解促進**: mermaid図でテーマの本質的構造を表現
3. **操作性**: 1-7タイル/行の柔軟な表示切り替え
4. **美的統一感**: 全タイルの視覚的一貫性維持

### 制約条件
- **技術制約**: Flowchart、Pie、Gantt、State、Class Diagramは使用禁止
- **レイアウト制約**: タイル比率3:4（横:縦）を厳守
- **表示制約**: 画面内完全収納、スクロール不要

---

## 実行プロセス

### Step 1: テーマ分析段階
**実行内容**:
```
各テーマについて以下を特定：
1. 核心概念の抽出（一言要約とし、30文字以内で本質を表現）
2. 関係性・構造の把握
3. 最適mermaid図タイプの選定
```

**思考プロセス**:
- テーマの抽象度レベルを判定
- ビジュアル表現に適した構造要素を特定
- 絵文字による感情的訴求ポイントを設定

### Step 2: 視覚設計段階
**レイアウト設計**:
```css
タイル構成:
- 横幅: calc(100% / [選択されたタイル数])
- 縦幅: calc(横幅 * 4/3)
- タイトル領域: 15%
- 説明領域: 10%  
- mermaid領域: 75%
- mermaid領域のみ、上詰め表示

```

**色彩戦略**:
- テーマ特性に応じた色彩心理学の適用
- アクセシビリティ配慮（コントラスト比4.5:1以上）
- ブランド一貫性の確保

### Step 3: mermaid図最適化段階
**図タイプ選定基準**:

| テーマ特性 | 推奨mermaid図 | 理由 |
|------------|---------------|------|
| 時系列・プロセス | Timeline | 順序関係の明確化 |
| 階層・組織構造 | Mindmap | 包含関係の視覚化 |
| ネットワーク関係 | Graph | 相互関係の表現 |
| 要素分解 | Block Diagram | 構成要素の明示 |

**絵文字戦略**:
- 各要素に意味的関連性のある絵文字を配置
- 文化的普遍性を考慮した選択
- 視覚的階層を強化する配色連動

### Step 4: 品質検証段階
**検証チェックリスト**:
- [ ] 50%縮小表示でタイトル判読可能
- [ ] mermaid図の構造が論理的
- [ ] 絵文字の意味的適切性
- [ ] 全体の視覚的バランス
- [ ] レスポンシブ動作の確認

---

## 出力仕様

### HTML構造テンプレート
```html
<div class="infographic-container">
  <!-- 表示制御UI -->
  <div class="control-panel">
    <label>タイル数/行: 
      <select id="tilesPerRow">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3" selected>3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
      </select>
    </label>
  </div>
  
  <!-- メインタイトル -->
  <h1 class="main-title">[絵文字×3] [統合テーマ名]</h1>
  
  <!-- タイルグリッド -->
  <div class="tiles-grid" id="tilesGrid">
    <!-- 各タイル -->
    <div class="tile">
      <div class="tile-title">[絵文字×3] [個別テーマ名]</div>
      <div class="description">[簡潔な説明文（一言要約とし、30文字以内で本質を表現）]</div>
      <div class="mermaid-container">
        <div class="mermaid">
          [最適化されたmermaid図]
        </div>
      </div>
    </div>
  </div>
</div>
```

### CSS仕様書
```css
/* レスポンシブグリッドシステム */
.tiles-grid {
  display: grid;
  gap: 1rem;
  padding: 1rem;
  grid-template-columns: repeat(var(--tiles-per-row), 1fr);
}

/* タイル基本構造 */
.tile {
  aspect-ratio: 3/4;
  border-radius: 12px;
  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
  overflow: hidden;
  transition: transform 0.3s ease;
}

/* 動的リサイズ対応 */
@media (max-width: 768px) {
  .tiles-grid { --tiles-per-row: 2; }
}
@media (max-width: 480px) {
  .tiles-grid { --tiles-per-row: 1; }
}
```

---

## 実装ガイドライン

### mermaid図作成ベストプラクティス

**Timeline使用例**（時系列テーマ）:
```mermaid
timeline
    title 🚀 プロジェクト進行
    section 企画段階
        📝 要件定義 : 市場調査 : 競合分析
    section 開発段階  
        ⚙️ 設計 : 🔧 実装 : 🧪 テスト
    section 運用段階
        📊 リリース : 📈 改善 : 🎯 最適化
```

**Mindmap使用例**（概念階層テーマ）:
```mermaid
mindmap
  root((🧠 AI技術))
    🤖 機械学習
      📊 教師あり学習
      🔍 教師なし学習  
      🎯 強化学習
    🧩 深層学習
      🖼️ CNN
      📝 RNN
      🔗 Transformer
    💭 自然言語処理
      📚 言語モデル
      🗣️ 音声認識
      🌐 翻訳
```

### 絵文字選定ガイドライン
1. **機能性**: 概念の本質を表現
2. **統一性**: テーマ全体の調和
3. **文化性**: グローバルな理解可能性
4. **視覚性**: 小サイズでの判読性

---

## エラーハンドリング

### 想定問題と対処法
1. **不適切テーマ**: 代替提案と理由説明
2. **mermaid図エラー**: フォールバック図の提供
3. **レイアウト崩れ**: 自動調整機能の実装

### 品質保証プロセス
```
検証段階 → 問題特定 → 修正実装 → 再検証 → 完了
    ↑                                    ↓
品質基準未達時のループバック処理
```

---

## 使用開始方法

**ユーザー指示フォーマット**:
```
テーマリスト: [テーマ1], [テーマ2], [テーマ3]...
統合タイトル: [任意指定 or 自動生成]
特別要求: [色彩傾向/業界特化など]
```

**実行確認**:
提供されたテーマを受信次第、上記フレームワークに従い、完全なHTMLアーティファクトとして実装します。

---
## 継続改善提案
- ユーザーフィードバックに基づくレイアウト最適化
- A/Bテストによる視認性向上
- アクセシビリティ対応の段階的強化

# ユーザーから提供されたテーマ


````

# 実装サンプル

```html
<!DOCTYPE html>
<html lang="ja">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>分かりやすい説明の技術</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.6.1/mermaid.min.js"></script>
    <style>
        * {
            margin: 0;
            padding: 0;
            box-sizing: border-box;
        }
        
        body {
            font-family: 'Hiragino Sans', 'Yu Gothic', sans-serif;
            background: white;
            min-height: 100vh;
            padding: 1rem;
        }
        
        .infographic-container {
            max-width: 1400px;
            margin: 0 auto;
        }
        
        .control-panel {
            background: #f8f9fa;
            padding: 1rem;
            border-radius: 12px;
            margin-bottom: 1.5rem;
            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
            border: 1px solid #e9ecef;
        }
        
        .control-panel label {
            font-weight: 600;
            color: #d32f2f;
            font-size: 1.1rem;
        }
        
        select {
            padding: 0.5rem 1rem;
            border: 2px solid #ddd;
            border-radius: 8px;
            font-size: 1rem;
            margin-left: 1rem;
            background: white;
            cursor: pointer;
            transition: border-color 0.3s ease;
        }
        
        select:focus {
            outline: none;
            border-color: #a8d8ea;
        }
        
        .main-title {
            text-align: center;
            font-size: 2.5rem;
            color: #1976d2;
            margin-bottom: 2rem;
            font-weight: 700;
        }
        
        .tiles-grid {
            display: grid;
            gap: 1.5rem;
            grid-template-columns: repeat(var(--tiles-per-row, 3), 1fr);
            transition: all 0.5s ease;
        }
        
        .tile {
            aspect-ratio: 3/4;
            border-radius: 16px;
            box-shadow: 0 4px 16px rgba(0,0,0,0.08);
            overflow: hidden;
            transition: all 0.3s ease;
            border: 2px solid transparent;
            display: flex;
            flex-direction: column;
        }
        
        .tile:nth-child(1) {
            background: linear-gradient(135deg, #ffd7d7 0%, #ffe6e6 100%);
            border-color: #ffb3b3;
        }
        
        .tile:nth-child(2) {
            background: linear-gradient(135deg, #ffe4b3 0%, #fff0d6 100%);
            border-color: #ffcc80;
        }
        
        .tile:nth-child(3) {
            background: linear-gradient(135deg, #fff2b3 0%, #fff8d6 100%);
            border-color: #ffe082;
        }
        
        .tile:nth-child(4) {
            background: linear-gradient(135deg, #d7ffd7 0%, #e6ffe6 100%);
            border-color: #b3ffb3;
        }
        
        .tile:nth-child(5) {
            background: linear-gradient(135deg, #b3e6ff 0%, #d6f2ff 100%);
            border-color: #80d4ff;
        }
        
        .tile:nth-child(6) {
            background: linear-gradient(135deg, #d7b3ff 0%, #e6d6ff 100%);
            border-color: #c080ff;
        }
        
        .tile:nth-child(7) {
            background: linear-gradient(135deg, #ffb3e6 0%, #ffd6f0 100%);
            border-color: #ff80cc;
        }
        
        .tile:hover {
            transform: translateY(-4px);
            box-shadow: 0 8px 24px rgba(0,0,0,0.12);
        }
        
        .tile-title {
            font-size: clamp(1.1rem, 2vw, 1.4rem);
            font-weight: 700;
            color: #d32f2f;
            padding: 1rem 1rem 0.5rem;
            text-align: center;
            line-height: 1.3;
        }
        
        .tile:nth-child(1) .tile-title {
            color: #e91e63;
        }
        
        .tile:nth-child(2) .tile-title {
            color: #ff9800;
        }
        
        .tile:nth-child(3) .tile-title {
            color: #ffc107;
        }
        
        .tile:nth-child(4) .tile-title {
            color: #4caf50;
        }
        
        .tile:nth-child(5) .tile-title {
            color: #2196f3;
        }
        
        .tile:nth-child(6) .tile-title {
            color: #9c27b0;
        }
        
        .tile:nth-child(7) .tile-title {
            color: #e91e63;
        }
        
        .description {
            font-size: clamp(0.8rem, 1.5vw, 0.95rem);
            color: #1565c0;
            padding: 0 1rem 0.5rem;
            text-align: center;
            line-height: 1.4;
            font-weight: 600;
        }
        
        .mermaid-container {
            flex: 1;
            padding: 0 0.5rem 1rem;
            display: flex;
            align-items: flex-start;
            justify-content: center;
            overflow: hidden;
        }
        
        .mermaid {
            width: 100%;
            height: auto;
            font-size: clamp(0.6rem, 1.2vw, 0.8rem) !important;
        }
        
        .mermaid svg {
            max-width: 100%;
            height: auto;
        }
        
        @media (max-width: 1200px) {
            .tiles-grid { --tiles-per-row: 2; }
        }
        
        @media (max-width: 768px) {
            .tiles-grid { --tiles-per-row: 1; }
            .main-title { font-size: 2rem; }
        }
        
        @media (max-width: 480px) {
            body { padding: 0.5rem; }
            .control-panel { padding: 0.75rem; }
            .main-title { font-size: 1.75rem; }
        }
    </style>
</head>
<body>
    <div class="infographic-container">
        <div class="control-panel">
            <label>タイル数/行: 
                <select id="tilesPerRow">
                    <option value="1">1</option>
                    <option value="2">2</option>
                    <option value="3" selected>3</option>
                    <option value="4">4</option>
                </select>
            </label>
        </div>
        
        <h1 class="main-title">🐕🚶‍♂️🥍 犬も歩けば棒に当たる</h1>
        
        <div class="tiles-grid" id="tilesGrid">
            <div class="tile tile-original">
                <div class="tile-title">🐕📜✨ 諺の起源</div>
                <div class="description">江戸時代の教訓から生まれた智慧</div>
                <div class="mermaid-container">
                    <div class="mermaid">
                        timeline
                            title 🏮 諺の歴史的変遷
                            section 江戸時代
                                📜 誕生 : 災難への警告
                            section 明治時代
                                🔄 意味拡大 : 好機の発見
                            section 現代
                                💡 両義性 : 行動の重要性
                    </div>
                </div>
            </div>
            
            <div class="tile tile-modern">
                <div class="tile-title">🧠⚖️💪 現代的解釈</div>
                <div class="description">行動にはリスクと機会が両立する</div>
                <div class="mermaid-container">
                    <div class="mermaid">
                        mindmap
                          root((🐕 行動の哲学))
                            🎯 積極性
                              ✅ チャンス獲得
                              ⚡ 経験値向上
                              🔍 視野拡大
                            ⚖️ リスク管理
                              📊 確率思考
                              🛡️ 準備の重要性
                              💡 学習機会
                            🌟 成功法則
                              🚀 行動第一
                              🔄 試行錯誤
                              📈 継続改善
                    </div>
                </div>
            </div>
        </div>
    </div>

    <script>
        // Mermaidの初期化
        mermaid.initialize({
            startOnLoad: true,
            theme: 'base',
            themeVariables: {
                primaryColor: '#e1f5fe',
                primaryTextColor: '#000000',
                primaryBorderColor: '#1976d2',
                lineColor: '#4caf50',
                secondaryColor: '#f8f9fa',
                tertiaryColor: '#e9ecef',
                background: '#ffffff',
                mainBkg: '#ffffff',
                secondaryBkg: '#f8f9fa',
                nodeBorder: '#1976d2',
                clusterBkg: '#fff3e0',
                clusterBorder: '#ff9800',
                defaultLinkColor: '#1976d2',
                titleColor: '#000000',
                edgeLabelBackground: '#ffffff'
            },
            mindmap: {
                padding: 10
            },
            timeline: {
                padding: 10
            },
            flowchart: {
                padding: 10
            },
            fontFamily: 'Hiragino Sans, Yu Gothic, sans-serif'
        });
        
        // タイル数制御機能
        document.getElementById('tilesPerRow').addEventListener('change', function() {
            const tilesGrid = document.getElementById('tilesGrid');
            tilesGrid.style.setProperty('--tiles-per-row', this.value);
        });
        
        // 初期値設定
        document.getElementById('tilesGrid').style.setProperty('--tiles-per-row', '3');
    </script>
</body>
</html>
```
